--- a/api/.env.example
+++ b/api/.env.example
@@ -1,18 +1,21 @@
-APP_NAME=Blog
+APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:++1JWmhLJSc+HQrqcFNqKQlscwtzsu/ryndtDHhTAQ8=
 APP_DEBUG=true
 APP_URL=http://localhost:7575
+APP_PORT=7575
 FORWARD_PHPMYADMIN_PORT=7576
+WWWGROUP=2000
+WWWUSER=2000
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel_blog
+DB_DATABASE=ama_group_db
 DB_USERNAME=root
 DB_PASSWORD=
 
